--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>X R H</title>
     <link rel="stylesheet" href="https://db.onlinewebfonts.com/c/b0755951227a35be2e1b6af8a8bbe233?family=Borsok">
-    <link rel="icon" href="" type="image/x-icon">
+    <link rel="icon" href="https://raw.githubusercontent.com/xrhfn/home/main/xrh.png" type="image/x-icon">
     <style>
         header {
             padding: 20px;
@@ -120,11 +120,11 @@
         <h1 class="title">X R H</h1>
         <center>
             <div class="box" style="background-color: transparent;" id="secure-box">
-                <button class="button" style="font-size: 100;" onclick="redirect('')">T r y o u t s</button> 
+                <button class="button" style="font-size: 100;" onclick="redirect('https://forms.gle/yhTEXejC2pYERboa7')">T r y o u t s</button> 
             </div>
 
             <div class="box" style="background-color: transparent;" id="fast-box">
-                <button class="button" style="font-size: 100;" onclick="redirect('')">A b o u t</button>
+                <button class="button" style="font-size: 100;" onclick="redirect('https://xrhfn.github.io/about/')">A b o u t</button>
             </div>
 
             <div class="box" style="background-color: transparent;" id="simple-box">
